--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,18 +1,20 @@
 name: free42
 base: core18 # the base snap is the execution environment for this snap
 version: "v3.0.6" # just for humans, typically '1.2+git' or '1.3.2'
-summary: Single-line elevator pitch for your amazing snap # 79 char long summary
+summary: An HP-42S Calculator Simulator
 description: |
-  This is my-snap's description. You have a paragraph or two to tell the
-  most important story about your snap. Keep it under 100 words though,
-  we live in tweetspace and your description wants to look good in the snap
-  store.
+  Free42 is a re-implementation of the HP-42S Scientific Programmable Calculator
+  and HP-82240 Printer.  It is a complete rewrite, not using any HP code. It does
+  not require an HP-42S ROM image.  Even though it contains significant
+  enhancements compared to the original calculator, Free42 remains fully
+  compatible with the HP-42S, both in its user interface and in its ability to run
+  programs written for the HP-42S.
 
 architectures:
   - build-on: i386
   - build-on: amd64
 
-grade: devel # must be 'stable' to release into candidate/stable channels
+grade: stable # must be 'stable' to release into candidate/stable channels
 confinement: strict # use 'strict' once you have the right plugs and slots
 
 apps:
@@ -24,7 +26,6 @@ apps:
 
 parts:
   free42:
-    # See 'snapcraft plugins'
     plugin: make
     source: https://github.com/thomasokken/free42.git
     source-tag: v3.0.6
@@ -32,10 +33,6 @@ parts:
       ./build-gtk
       ls packages
       tar xvfz packages/*.tgz
-      # -C $SNAPCRAFT_PART_INSTALL
       ls Free42Linux
       cp Free42Linux/* $SNAPCRAFT_PART_INSTALL
       ls $SNAPCRAFT_PART_INSTALL
-#    build-packages:
-#      - libgtk-3-dev
-#      - libasound2-dev
