--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,6 +1,6 @@
 name: free42
 base: core18 # the base snap is the execution environment for this snap
-version: "v3.0.6" # just for humans, typically '1.2+git' or '1.3.2'
+version: "3.0.11a" # just for humans, typically '1.2+git' or '1.3.2'
 summary: An HP-42S Calculator Simulator
 description: |
   Free42 is a re-implementation of the HP-42S Scientific Programmable Calculator
@@ -35,7 +35,7 @@ parts:
   free42:
     plugin: make
     source: https://github.com/thomasokken/free42.git
-    source-tag: v3.0.6
+    source-tag: v3.0.11a
     override-build: |
       ./build-gtk
       tar xvfz packages/*.tgz
